# fair-share

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  fair_share.py  main.py  myproject.toml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_fair_share.py
