[project]
name = "fair-share"
version = "0.1.0"
description = "An equal expense splitting calculator"
authors = [{ name = "Ruth Bar" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.pytest.ini_options]
pythonpath = ["."]
